--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -483,14 +483,14 @@ textarea.job_description:focus
 {
     float: left;
 
-    width: 300px;
+    width: 280px;
     height: 100%;
 }
 .main_compnay_left_nav
 {
     overflow: hidden
 
-    width: 300px;
+    width: 280px;
 
     height: 100%;
 
@@ -502,7 +502,7 @@ textarea.job_description:focus
     font-size: 18px;
     line-height: 60px;
 
-    width: 300px;
+    width: 280px;
     height: 60px;
     margin-bottom: 20px;
     padding-left: 20px;
@@ -527,7 +527,7 @@ textarea.job_description:focus
 
     width: 920px;
     height: 100%;
-    padding-left: 80px;
+    padding-left: 40px;
 }
 .main_company_right_banner_nav
 {
@@ -869,7 +869,7 @@ p.p_company_info
 .online_offline_nav
 {
     position: relative;
-    top: 10px;
+    top: 30px;
     width: 100%;
     height: 80px;
 }
@@ -881,25 +881,26 @@ p.p_company_info
 }
 .online_offline_nav_list > li a
 {
-    color: rgba(0,0,0,.5);
+    color: rgba(255,255,255,1);
 }
 .online_offline_nav_list > li
 {
-    height: 80px;
+    height: 50px;
     width: 650px;
     float: left;
     text-align: center;
-    line-height: 80px;
+    line-height: 50px;
     font-size: 24px;
     color: rgba(0,0,0,.5);
-    border-bottom: 3px solid rgba(0,0,0,.3);
+    border-bottom:1px solid rgba(0,0,0,.3);
     -webkit-transition: all .1s;
     -o-transition: all .1s;
     transition: all .1s;
+    background-color: rgba(50,50,50,1)
 }
 .online_offline_nav_list > li:hover
 {
-    border-bottom: 3px solid rgba(0,146,210,1);
+    border-bottom: 1px solid rgba(0,146,210,1);
 }
 .index_single_item
 {
