--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -1024,6 +1024,40 @@ span.numofpeople
 
 
 
+/*分页*/
+.paginate
+{
+    width: 900px;
+    height: 50px;
+}
+.pagination
+{
+    height: 50px;
+    float: left;
+        border-radius: 5px;
+    overflow: hidden;
+}
+.pagination >li a
+{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+.pagination >li 
+{
+    height: 50px;
+    width: 50px;
+
+    float: left;
+    line-height: 50px;
+    text-align: center;
+    background-color: #fff;
+    border: 1px solid #eee;
+}
+
+
+
+
 
 
 
