--- a/resources/views/layouts/userApp.blade.html
+++ b/resources/views/layouts/userApp.blade.html
@@ -23,7 +23,11 @@
 	</div>
 
 	<div class="user_main_banenr">
-		<div class="user_main_content"></div>
+		<div class="user_main_content">
+			<div class="user_main_job_level1"></div>
+			<div class="user_main_job_level2"></div>
+			<div class="user_main_job_level3"></div>
+		</div>
 	</div>
 
 	<div class="user_bottom_banner">
