--- a/resources/views/layouts/user.css
+++ b/resources/views/layouts/user.css
@@ -41,13 +41,30 @@ span.morebig
 
     color: #fff;
 }
-
 a.full_a
 {
     display: inline-block;
 
     width: 100%;
     height: 100%;
+}
+p{
+    overflow: hidden;
+}
+p.nomargin
+{
+    margin: 0;
+    margin: 2px 0;
+}
+p.left
+{
+    display: inline-block;
+    float: left;
+}
+p.right
+{
+    display: inline-block;
+    float: right;
 }
 .gray
 {
@@ -63,6 +80,7 @@ a.full_a
 }
 .user_nav_banner
 {
+    z-index: 1;
     color: rgba(241,241,241,1);
     position: fixed;
     top: 0;
@@ -127,32 +145,186 @@ a.full_a
     width: 1400px;
     min-height: 1000px;
     margin: 0 auto;
-
-    background-color: rgba(255,255,255,1);
+    display: flex;
+    justify-content: space-between;
+/*
+    background-color: rgba(255,255,255,1);*//*
+    box-shadow: 0 0 5px 1px rgba(22,22,22,.1);*/
+}
+.user_main_left_content
+{
+    padding: 40px 0 0 50px;
+    background-color: #fff;
+    min-height:1000px;
+    width: 1000px;
+    box-shadow: 0 0 5px 1px rgba(22,22,22,.1);
+}
+.user_main_right_content
+{
+    background-color: #fff;
+    min-height:1000px;
+    width: 350px;
     box-shadow: 0 0 5px 1px rgba(22,22,22,.1);
 }
 .user_main_job_level1
 {
-    width: 1000px;
-    height: 200px;
-    background-color: red;
+    width: 900px;
+    min-height: 36px;
+    max-height: 144px;
+    border-left: 5px solid rgba(0,0,0,.7);
+    margin-top: 5px;
 }
 .user_main_job_level2
 {
-    width: 1000px;
-    height: 200px;
-    background-color: pink;
+    width: 900px;
+    min-height: 36px;
+    max-height: 144px;
+    border-left: 5px solid rgba(0,0,0,.7);
+    margin-top: 5px;
 }
-.user_main_job_level3
+.user_main_job_key
 {
-    width: 1000px;
-    height: 200px;
-    background-color: #eee;
+    width: 900px;
+    min-height: 36px;
+    max-height: 144px;
+    border-left: 5px solid rgba(0,0,0,.7);
+    margin-top: 5px;
+}
+.user_main_job_keylist
+{
+    width: 900px;
+    min-height: 36px;
+    max-height: 144px;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+}
+.user_main_job_keylist li{
+    color: rgba(0,0,0,.8);
+    height: 36px;
+    font-size: 15px;
+    line-height: 36px;
+    text-align: center;
+    margin-left: 30px;
+}
+.user_main_job_keylist li:hover
+{
+    color: rgba(0,146,210,1);
 }
 
 
+.index_single_item
+{
+    float: left;
+    top: 50px;
+    margin-top: 20px;
 
+    overflow: hidden;
 
+    width: 450px;
+    height: 180px;
+
+    -webkit-transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
+
+    border-left: 5px solid rgba(0,0,0,.7);
+}
+.index_single_item:hover
+{
+    border-left: 5px solid rgba(0,146,210,1);
+}
+.index_single_item a
+{
+    -webkit-transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
+}
+.index_single_item a:hover
+{
+    color: rgba(0,146,210,1);
+}
+.index_single_item_jobinfo
+{
+    position: relative;
+
+    float: left;
+
+    width: 450px;
+    height: 180px;
+    padding: 0 20px 0 30px;
+}
+.index_single_item_peopleinfo
+{
+    float: right;
+
+    width: 180px;
+    height: 220px;
+}
+.index_single_item_jobinfo_numofpeople
+{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 50px;
+
+    position: absolute;
+    left: 40%;
+
+    width: 180px;
+    height: 50px;
+
+    text-align: center;
+
+    color: rgba(0,0,0,.5);
+    border-right: 1px solid rgba(0,0,0,.1);
+    border-left: 1px solid rgba(0,0,0,.1);
+}
+span.numofpeople
+{
+    font-size: 26px;
+
+    padding: 0 10px;
+
+    color: rgba(0,146,210,1);
+}
+.index_single_item_jobinfo_button
+{
+    font-size: 15px;
+    line-height: 40px;
+
+    position: absolute;
+
+    width: 100px;
+    height: 40px;
+
+    cursor: pointer;
+    -webkit-transition: all .1s;
+         -o-transition: all .1s;
+            transition: all .1s;
+    text-align: center;
+
+    color: #fff;
+    border-radius: 5px;
+    background-color: rgba(0,146,210,1);
+}
+.index_single_item_jobinfo_edit_button
+{
+    left: 85%;
+}
+.index_single_item_jobinfo_offline_button
+{
+    left: 70%;
+
+    background-color: #ff6f00;
+}
+.index_single_item_jobinfo_button:hover
+{
+    opacity: .9;
+}
+.index_single_item_jobinfo_button a:hover
+{
+    color: #fff;
+}
 
 
 
