--- a/resources/views/layouts/userApp.blade.html
+++ b/resources/views/layouts/userApp.blade.html
@@ -5,34 +5,317 @@
 	<title>Hunter</title>
 	<link rel="stylesheet" type="text/css" href="./normallize.css">
 	<link rel="stylesheet" type="text/css" href="./user.css">
-	<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+	<!-- 	<script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
+-->
 </head>
 <body>
-	<div class="user_nav_banner">
-		<div class="user_nav_content">
-			<ul class="user_nav_search_function">
-				<li>搜索功能</li>
-				<li>搜索按钮</li>
-			</ul>
-			<ul class="user_nav_user_function">
-				<li>我的关注</li>
-				<li>简历管理</li>
-				<li>退出</li>
-			</ul>
-		</div>
+<div class="user_nav_banner">
+	<div class="user_nav_content">
+		<ul class="user_nav_search_function">
+			<li>搜索功能</li>
+			<li>搜索按钮</li>
+		</ul>
+		<ul class="user_nav_user_function">
+			<li>我的关注</li>
+			<li>简历管理</li>
+			<li>退出</li>
+		</ul>
 	</div>
+</div>
 
-	<div class="user_main_banenr">
-		<div class="user_main_content">
-			<div class="user_main_job_level1"></div>
-			<div class="user_main_job_level2"></div>
-			<div class="user_main_job_level3"></div>
-		</div>
-	</div>
+<div class="user_main_banenr">
+	<div class="user_main_content">
+		<div class="user_main_left_content">
+			<div class="user_main_job_level1">
+				<ul class="user_main_job_keylist">
+					<a href="">
+						<li>人事管理</li>
+					</a>
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+				</ul>
+			</div>
+			<div class="user_main_job_level2">
+				<ul class="user_main_job_keylist">
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<a href="">
+						<li>人事管理</li>
+					</a>
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+				</ul>
+			</div>
+			<div class="user_main_job_key">
+				<ul class="user_main_job_keylist">
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<a href="">
+						<li>人事管理</li>
+					</a>
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>人事管理</li>
+					</a>
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<a href="">
+						<li>人事管理</li>
+					</a>
+					<a href="">
+						<li>市场</li>
+					</a>
+					<a href="">
+						<li>技术部门</li>
+					</a>
+					<a href="">
+						<li>金融</li>
+					</a>
+					<a href="">
+						<li>运维</li>
+					</a>
+					<a href="">
+						<li>安保</li>
+					</a>
+					<a href="">
+						<li>产品</li>
+					</a>
+					<a href="">
+						<li>其他</li>
+					</a>
+					<!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+				</ul>
+			</div>
 
-	<div class="user_bottom_banner">
-		<div class="user_bottom_content"></div>
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<a class="gray big" href="">JAVA工程师</a>
+					<p class="gray nomargin">公司名称 : 阿里巴巴</p>
+					<p class="gray nomargin">学历要求 : 本科</p>
+					<p class="gray nomargin">技术要求 : java</p>
+					<p class="gray nomargin">薪资 : 18k-30k</p>
+					<p class="gray nomargin">工作经验 : 1年合作项目</p>
+					<p class="gray nomargin">工作地点 : 北京</p>
+				</div>
+			</div>
+
+		</div>
+		<div class="user_main_right_content"></div>
 	</div>
+</div>
+
+<div class="user_bottom_banner">
+	<div class="user_bottom_content"></div>
+</div>
 
 </body>
 </html>
