--- a/resources/views/layouts/userApp.blade.html
+++ b/resources/views/layouts/userApp.blade.html
@@ -255,8 +255,7 @@
 					</div>
 				</div>
 			</div>
-
-						<div class="index_single_item">
+			<div class="index_single_item">
 				<div class="index_single_item_jobinfo">
 					<div class="per50">
 						<a class="big blue" href="">JAVA工程师</a>
@@ -273,7 +272,7 @@
 				</div>
 			</div>
 
-						<div class="index_single_item">
+			<div class="index_single_item">
 				<div class="index_single_item_jobinfo">
 					<div class="per50">
 						<a class="big blue" href="">JAVA工程师</a>
@@ -290,7 +289,41 @@
 				</div>
 			</div>
 
-						<div class="index_single_item">
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<div class="per50">
+						<a class="big blue" href="">JAVA工程师</a>
+						<p class="gray margin15">公司名称 : 阿里巴巴</p>
+						<p class="gray margin15">学历要求 : 本科</p>
+						<p class="gray margin15">技术要求 : java</p>
+					</div>
+					<div class="per50">
+						<div class="user_main_single_jobinfo_button">工作详情</div>
+						<p class="orange margin15">薪资 : 18k-30k</p>
+						<p class="gray margin15">工作经验 : 1年合作项目</p>
+						<p class="gray margin15">工作地点 : 北京</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="index_single_item">
+				<div class="index_single_item_jobinfo">
+					<div class="per50">
+						<a class="big blue" href="">JAVA工程师</a>
+						<p class="gray margin15">公司名称 : 阿里巴巴</p>
+						<p class="gray margin15">学历要求 : 本科</p>
+						<p class="gray margin15">技术要求 : java</p>
+					</div>
+					<div class="per50">
+						<div class="user_main_single_jobinfo_button">工作详情</div>
+						<p class="orange margin15">薪资 : 18k-30k</p>
+						<p class="gray margin15">工作经验 : 1年合作项目</p>
+						<p class="gray margin15">工作地点 : 北京</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="index_single_item">
 				<div class="index_single_item_jobinfo">
 					<div class="per50">
 						<a class="big blue" href="">JAVA工程师</a>
